--- a/src/components/Booking/Booking.css
+++ b/src/components/Booking/Booking.css
@@ -5,8 +5,8 @@
     position: relative;
 }
 .form-container {
-    background: rgb(10, 129, 226); 
-    /* change Please */
+    background-color: #FF3CAC;
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
     padding: 2rem 0;
     border-radius: 15px;
 }
@@ -14,7 +14,8 @@
 .btn-custom {
     margin-top: 0.9rem;
     padding: 0.6rem;
-    background-color: #1abaf9;
+    background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     font-weight: 900;
 }
 
