--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -9,19 +9,20 @@
 
 .navbar li a {
     font-size: 1rem;
-    color: rgb(179, 24, 240);
+    color: black;
     text-decoration: none;
     font-weight: 800;
     padding: 5px;
     border-radius: 7px;
 }
 .navbar li a:hover {
-    color: rgb(24, 240, 157);
+    color: rgb(24, 190, 240);
     text-decoration: underline;
 }
 
 .navbar li:last-child {
-    background-color: #1af9f9;
+    background-color: #F4D03F;
+    background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
     color: black;
     padding: 0.2rem 0.5rem;
     border-radius: 3px;
