--- a/src/components/Ticket/Card.css
+++ b/src/components/Ticket/Card.css
@@ -1,5 +1,6 @@
 .my-card {
-    background-color: rgb(0, 255, 157);
+  background-color: #FBDA61;
+background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
     color: white;
     margin: 20px;
     padding: 20px;
