--- a/src/components/TicketConfirm/TicketConfirm.css
+++ b/src/components/TicketConfirm/TicketConfirm.css
@@ -14,7 +14,8 @@
     margin: 8px;
 }
 .Place-distanation {
-    background-color: tomato;
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
     padding: 20px;
     border-radius: 10px;
 }
@@ -24,7 +25,8 @@
     grid-gap: 25px;
     font-weight: 600;
     font-size: 1.2rem;
-    background-color: rgb(71, 181, 255);
+    background-color: #FFDEE9;
+background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
     color: #000;
     padding: 10px;
     border-radius: 5px;
