--- a/src/components/TicketConfirm/TicketConfirm.css
+++ b/src/components/TicketConfirm/TicketConfirm.css
@@ -1,5 +1,5 @@
 .confirm-travel {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../Image/Train-Station.jpg') center/cover;
+    background: url('../../Image/Train-Station.jpg') center/cover;
     height: 250vh;
     font-weight: 700;
     position: relative;
@@ -35,3 +35,21 @@ background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
     width: 70px;
     border-radius: 10px;
 }
+.simple-map iframe {
+    width: 700;
+}
+
+@media only screen and (min-width: 400px) {
+
+    .simple-map iframe {
+        width: 100%;
+    }
+
+  }
+@media only screen and (min-width: 600px) {
+
+    .simple-map iframe {
+        width: 100%;
+    }
+
+  }
